--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "license": "",
   "author": "",
   "scripts": {
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --public-url https://change.greenpeace.org.tw/2021/site/DD-followup-HK/",
     "dev": "parcel index.html --open --port 3000",
     "start": "npm run build && npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {
+    "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.3",
+    "mailcheck": "^1.1.1"
   }
 }
